unpackaged/main/default/objects/Port_Order__c/Port_Order__c.object-meta.xml
<CustomObject>
    <label>Port Order</label>
    <nameField>
        <displayFormat>PON-{000000}</displayFormat>
        <label>PON</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Port Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>