unpackaged/main/default/objects/Port_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Port Orders</relationshipLabel>
    <relationshipName>Port_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>