unpackaged/main/default/objects/Port_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity`</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Port Orders</relationshipLabel>
    <relationshipName>Port_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>