unpackaged/main/default/objects/Port_Order__c/fields/Port_Date_FOC__c.field-meta.xml
<CustomField>
    <fullName>Port_Date_FOC__c</fullName>
    <label>Port Date FOC</label>
    <type>Date</type>
</CustomField>