unpackaged/main/default/objects/Port_Order__c/fields/Requested_Port_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Port_Date__c</fullName>
    <label>Requested Port Date</label>
    <type>Date</type>
</CustomField>