unpackaged/main/default/objects/Port_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Order Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Sent to Customer for Signature</fullName>
            </value>
            <value>
                <fullName>Signed by Customer</fullName>
            </value>
            <value>
                <fullName>Ready for Submission</fullName>
            </value>
            <value>
                <fullName>Submitted to Telco</fullName>
            </value>
            <value>
                <fullName>Scheduled by Telco</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>