unpackaged/main/default/objects/Port_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Numbers_Count__c</columns>
    <columns>Opportunity_Contract_Number__c</columns>
    <columns>Requested_Port_Date__c</columns>
    <columns>Port_Date_FOC__c</columns>
    <columns>Actual_Port_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>