unpackaged/main/default/objects/Port_Order__c/listViews/Company_Port_Orders.listView-meta.xml
<ListView>
    <fullName>Company_Port_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>Company Port Orders</label>
    <language>en_US</language>
</ListView>